# vty-windows

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  vty-windows.cabal
cbits/: win_commands.c  win_pseudo_console.c
src/Data/Terminfo/: Eval.hs
src/Graphics/Vty/Platform/: Windows.hs
src/Graphics/Vty/Platform/Windows/: Input.hs  Output.hs  ScreenSize.hs  Settings.hs  WindowsCapabilities.hs  WindowsConsoleInput.hsc  WindowsInterfaces.hs
src/Graphics/Vty/Platform/Windows/Input/: Classify.hs  Focus.hs  Loop.hs  Mouse.hs  Paste.hs  Terminfo.hs  WindowsInputSequences.hs
src/Graphics/Vty/Platform/Windows/Input/Classify/: Parse.hs  Types.hs
src/Graphics/Vty/Platform/Windows/Input/Terminfo/: ANSIVT.hs
src/Graphics/Vty/Platform/Windows/Output/: AnsiSequences.hs  Color.hs  TerminfoBased.hs  WindowSize.hs  WindowSizer.hs  WindowsOutputSequences.hs  XTermColor.hs
tests/: vty-windows-tests.cabal
tests/programs/: VerifyEvalTerminfoCaps.hs  VerifyOutput.hs  VerifyParseTerminfoCaps.hs  VerifyUsingMockInput.hs
tests/src/: WindowsPseudoConsole.hsc
tests/src/Verify/Graphics/Vty/: Attributes.hs  Output.hs  Picture.hs
