cabal-version:      3.0
name:               vty-windows
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Chris hackett
maintainer:         chris.h.hackett@gmail.com
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  Data.Terminfo.Eval
                      Data.Terminfo.Parse
                      Graphics.Vty.Platform.Windows
                      Graphics.Vty.Platform.Windows.Input
                      Graphics.Vty.Platform.Windows.Input.Loop
                      Graphics.Vty.Platform.Windows.Input.Terminfo
                      Graphics.Vty.Platform.Windows.Input.Terminfo.ANSIVT
                      Graphics.Vty.Platform.Windows.Input.Focus
                      Graphics.Vty.Platform.Windows.Input.Paste
                      Graphics.Vty.Platform.Windows.Input.Mouse
                      Graphics.Vty.Platform.Windows.Input.Classify
                      Graphics.Vty.Platform.Windows.Input.Classify.Parse
                      Graphics.Vty.Platform.Windows.Input.Classify.Types
                      Graphics.Vty.Platform.Windows.Output
                      Graphics.Vty.Platform.Windows.Output.TerminfoBased
                      Graphics.Vty.Platform.Windows.Output.XTermColor
                      Graphics.Vty.Platform.Windows.Output.Color
                      Graphics.Vty.Platform.Windows.Settings
                      Graphics.Vty.Platform.Windows.WindowsCapabilities
                      Graphics.Vty.Platform.Windows.WindowsConsoleInput
                      Graphics.Vty.Platform.Windows.WindowsInterfaces
    build-depends:    base ^>=4.17.1.0,
                      blaze-builder,
                      bytestring,
                      containers,
                      deepseq,
                      directory,
                      filepath,
                      parsec,
                      microlens,
                      microlens-mtl,
                      microlens-th,
                      mtl,
                      stm,
                      transformers,
                      utf8-string,
                      vector,
                      vty,
                      Win32,
    hs-source-dirs:   src
    default-language: Haskell2010
