name:                vty-windows-tests
version:             5.37
license:             BSD3
license-file:        LICENSE
author:              Chris hackett
maintainer:          chris.h.hackett@gmail.com
category:            User Interfaces
synopsis:            Test suite for the Vty-windows library
cabal-version:       1.18
build-type:          Simple
extra-doc-files:     LICENSE
tested-with:         GHC==9.4.5

source-repository head
  type: git
  location: https://github.com/chhackett/vty-windows.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Verify
                       WindowsPseudoConsole
                       Verify.Graphics.Vty.Attributes
                       Verify.Graphics.Vty.Prelude
                       Verify.Graphics.Vty.Picture
                       Verify.Graphics.Vty.Image
                       Verify.Graphics.Vty.Output
                       Verify.Data.Terminfo.Parse
  build-depends:       base >= 4.8 && < 5,
                       deepseq >= 1.1,
                       mtl >= 1.1.1.0 && < 2.4,
                       utf8-string >= 0.3 && < 1.1,
                       vector >= 0.7,
                       QuickCheck,
                       Cabal,
                       Win32,
                       vty,
                       vty-windows

  if !impl(ghc >= 8.0)
    build-depends:     semigroups >= 0.16,
                       fail

-- test-suite verify-output
--   default-language:    Haskell2010
--   type:                detailed-0.9
--   hs-source-dirs:      programs
--   test-module:         VerifyOutput
--   build-depends:       base >= 4.8 && < 5,
--                        vty,
--                        vty-windows,
--                        vty-windows-tests,
--                        Cabal >= 1.20

test-suite verify-eval-terminfo-caps
  default-language:    Haskell2010
  type:                detailed-0.9
  hs-source-dirs:      programs
  test-module:         VerifyEvalTerminfoCaps
  build-depends:       base >= 4.8 && < 5,
                       vty,
                       vty-windows,
                       vty-windows-tests,
                       Cabal >= 1.20,
                       blaze-builder >= 0.3.3.2 && < 0.5,
                       deepseq >= 1.1 && < 1.5

test-suite verify-parse-terminfo-caps
  default-language:    Haskell2010
  type:                detailed-0.9
  hs-source-dirs:      programs
  test-module:         VerifyParseTerminfoCaps
  build-depends:       base >= 4.8 && < 5,
                       vty,
                       vty-windows,
                       vty-windows-tests,
                       blaze-builder >= 0.3.3.2 && < 0.5,
                       Cabal >= 1.20,
                       deepseq >= 1.1 && < 1.5

test-suite verify-using-mock-input
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      programs
  main-is:             VerifyUsingMockInput.hs
  ghc-options:         -threaded -Wall
  build-depends:       base >= 4.8 && < 5,
                       vty,
                       vty-windows,
                       vty-windows-tests,
                       smallcheck == 1.*,
                       test-framework == 0.8.*,
                       test-framework-smallcheck == 0.2.*,
                       microlens,
                       stm
